kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: products.local
      http:
        paths:
          - path: /get/products
            pathType: Prefix
            backend:
              service:
                name: get-products-ms
                port:
                  number: 80
          - path: /post/products
            pathType: Prefix
            backend:
              service:
                name: post-products-ms
                port:
                  number: 80
          - path: /patch/products
            pathType: Prefix
            backend:
              service:
                name: patch-products-ms
                port:
                  number: 80
          - path: /delete/products
            pathType: Prefix
            backend:
              service:
                name: delete-products-ms
                port:
                  number: 80
